2.1.0.dev
----------------

- fix issue199: "devpi test" can now handle packages with dashes in their name.
- change: the following fixes change behavior if used in scripts
- fix issue174: ask for confirmation when deleting an index or user.
- fix issue156 and issue199: "devpi push" now uses "pkgname==version" like
  "list" and "test". This also fixes usage with packages containing dashes in
  their name.

2.0.5
----------------

- fix issue209: argument default handling changed in argparse in Python 2.7.9.
- fix issue163: use PIP_CONFIG_FILE environment variable if set.
- fix issue191: provide return code !=0 for failures during push

2.0.4
----------------

- fix issue181: provide Return code != 0 for failed upload POST requests.

- fix "devpi" invocation or py3, it was tracebacking instead of showing
  the valid subcommands.
 
2.0.3
----------------

- use default "https://www.python.org/pypi" when no repository is set in .pypirc
  see https://docs.python.org/2/distutils/packageindex.html#the-pypirc-file

- fix issue152: when --upload-docs is given, make sure to first register
  and upload the release file before attempting to upload docs (the latter
  requires prior registration)

- fix issue75: add info about basic auth to "url" option help of "devpi use".

- fix issue154: fix handling of vcs-exporting when unicode filenames are
  present.  This is done by striking our own code in favor of Marius Gedminas' 
  vcs exporting functions from his check-manifest project which devpi-client
  now depends on.  This also adds in support for svn and bazaar in addition
  to the already supported git/hg.

- devpi list: if a tox result does not contain basic information (probably a bug in
  tox) show a red error instead of crashing out with a traceback.

- fix issue157: filtering of tox results started with the oldest ones and
  didn't show newer results if the host, platform and environment were the same.

2.0.2
----------------
